  * Never consider the root filesystem to be virtual or remote, even when
    it is, since we assert that it's already mounted so we don't have to
    take care of it.
  * Check whether filesystems mounted readonly when we start do not have
    "ro" in their fstab, before assuming we need to remount them.
    Readonly filesystems not in fstab (e.g. LiveCD, Wubi, etc.) never need
    remounting.

  [ Colin Watson ]
  * Ignore errors from kill in mountall-net, since they're almost certainly
    just because mountall exited before we had a chance to kill it
    LP: #430755.

 -- Scott James Remnant <scott@ubuntu.com>  Wed, 16 Sep 2009 15:06:43 +0100

mountall (0.1.4) karmic; urgency=low

  [Johan Kiviniemi]
  * Don't run fsck when the device has already been marked ready.

  [Scott James Remnant]
  * Don't abort when we have nothing to copy into /dev and /var/run, or
    nothing to remove from /tmp

 -- Scott James Remnant <scott@ubuntu.com>  Wed, 16 Sep 2009 00:15:53 +0100

mountall (0.1.3) karmic; urgency=low

  * mount.ntfs and mount.ntfs-3g do not support the standard "-n" (no mtab)
    mount option, and error when passed.  Since the ntfs code is rather
    complex, and seems safe against failing to write to mtab, work around
    it in mountall and never pass -n to mount for ntfs and ntfs-3g
    filesystems 
  * Failure to check or mount a filesystem that's not critical to the boot
    no longer results in immediate termination of mountall.
  * Failure to mount a remote filesystem no longer results in immediate
    termination of mountall, since these may be retried when other interfaces
    are brought up.
  * Improved error message output on mountall failure, temporarily enabled
    output so important messages aren't lost.
  * Removed /forcefsck after checks are complete.

 -- Scott James Remnant <scott@ubuntu.com>  Tue, 15 Sep 2009 02:53:34 +0100

mountall (0.1.2) karmic; urgency=low

  * Unconditionally configure.
